[package]
name = "tabwriter"
version = "1.1.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Elastic tabstops."
documentation = "https://docs.rs/tabwriter"
homepage = "https://github.com/BurntSushi/tabwriter"
repository = "https://github.com/BurntSushi/tabwriter"
readme = "README.md"
keywords = ["tabs", "elastic", "aligned", "whitespace", "table"]
license = "Unlicense/MIT"

[dependencies]
unicode-width ={features=["no_std"],version ="0.1"} 
regex = { optional = true, git = "https://github.com/mesalock-linux/regex-sgx" }
lazy_static  = { version = "1.4.0", features = ["spin_no_std"], optional = true }
sgx_tstd = { rev = "v1.0.9", git="https://github.com/baidu/rust-sgx-sdk.git", optional = true }
[features]
default = []
mesalock_sgx=["sgx_tstd"]
ansi_formatting = ["regex", "lazy_static"]
